--- a/vhosts/_default_/httpdocs/index.html
+++ b/vhosts/_default_/httpdocs/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" />
 	<link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Teko:400,700,600,500,300" >
 
-	<style type="text/less">
+	<style lang="less" type="text/less" >
 		/* mixins */
 		.flex() {
 			display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
@@ -81,7 +81,7 @@
 
 
 		.default-bg {
-			background: #000 no-repeat center center url('http://lorempixel.com/1280/700/');
+			background: #000 no-repeat center center url('//picsum.photos/640/350/');
 			background-size: cover;
 			color: white;
 
